<resources>

    <string name="app_name">Fantasy Football</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="label_firstname">First Name</string>
    <string name="label_lastname">Last Name</string>
    <string name="label_email">Email</string>
    <string name="label_mobile">Mobile</string>
    <string name="label_save">Save</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_register">Register</string>

</resources>